--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#Dev
+spring.datasource.url = jdbc:mysql://localhost:3306/easy-fit
+spring.datasource.username = root
+spring.datasource.password = root
